@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-08-14 23:52:44+01:00 - build 6530
+
+1. Attributes dialog fixes for plugin panels.
+
+--------------------------------------------------------------------------------
 drkns 2025-08-14 20:25:53+01:00 - build 6529
 
 1. Fix editor whitespace generation.
